--- a/1.html
+++ b/1.html
@@ -8,7 +8,7 @@
     <ul>
       <li>코딩 공부</li>
       <li>러시아어 시험 접수</li>
-  <h3><strong>вторник</strong><h3>
-  <input type="checkbox">html 끝내기
+  <h3><strong>понедельник</strong><h3>
+  <input type="checkbox">html 끝내기<br>
   <input type="checkbox">프로젝트 보고서
 </body>
