--- a/2.html
+++ b/2.html
@@ -8,7 +8,7 @@
     <ul>
       <li>코딩 공부</li>
       <li>러시아어 시험 접수</li>
-  <h3><strong>вторник</strong><h3>
-  <input type="checkbox">
+  <strong>вторник</strong>
+  <input type="checkbox"><br>
   <input type="checkbox">
 </body>
